# gtasks-mcp-server

./: .gitignore  Makefile  README.md  pyproject.toml
gtasks_mcp_server/: main.py  server.py
